My final commit

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ h1{
 }
 
 body{
-	background-image: url('Indexpage1.jpg');
+	background-image: url('Indexpage.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: calc(100vh);
